[package]
name = "esp-spinlock-repro"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = 3
debug = true
lto = "thin"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16


[profile.release]
opt-level = 3
debug = true
lto = "fat"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[dependencies]
esp-backtrace = { version = "0.3.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.3.1", features = ["esp32s3", "log"] }
esp32s3-hal = "0.3.0"
heapless = { version = "0.7.16", default-features = false, features = ["cas"] }
xtensa-lx-rt = { version = "0.13.0", features = ["esp32s3"] }
